--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           sudo apt-get update
-          sudo apt-get install -y software-properties-common apt-transport-https ninja
+          sudo apt-get install -y software-properties-common apt-transport-https ninja-build
           curl -s https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
           sudo apt-add-repository -y 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-15 main'
           sudo apt-get update
