--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,5 +17,5 @@ jobs:
       - run: cmake --preset release
       - run: ninja -C cmake-build-release
       - run: ./cmake-build-release/untitled
-      - run: ctest --test-dir cmake-build-release
+      - run: ctest --test-dir cmake-build-release --output-on-failure
 
